--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
 .container {
   display: flex;
   gap: 20px;
-  flex-direction: row;
+  flex-direction: row-reverse;
 }
 
 .clients-section, .debts-section {
